--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -14,11 +14,12 @@
             background-repeat: no-repeat;
             background-size: cover;
             height: 97vh;
+            background-attachment: fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -33,6 +34,15 @@
         <h1>
             Teste de Fundo
         </h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore exercitationem nobis ab ipsum consequatur
+            natus vitae id deserunt. Repellendus enim officia non vel magnam eligendi veritatis obcaecati minima aliquam
+            voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi possimus voluptatibus ad dolor
+            voluptatum a, aliquam iure accusamus debitis cum. Vero ut corporis iste tempora deleniti corrupti officia
+            itaque temporibus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto consequuntur libero
+            rerum unde ut laboriosam sequi? Ipsam ex provident, reiciendis eius quas deleniti numquam asperiores illum
+            amet. Voluptates, odit eius.
+        </p>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore exercitationem nobis ab ipsum consequatur
             natus vitae id deserunt. Repellendus enim officia non vel magnam eligendi veritatis obcaecati minima aliquam
