--- a/desafios/desafio14/index.html
+++ b/desafios/desafio14/index.html
@@ -52,7 +52,7 @@
 <body>
     <table>
         <caption>
-            Boletin
+            Boletim
         </caption>
         <thead>
             <tr>
