--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="cadastro.php" method="post">
+    <form action="cadastro.php" method="post" autocomplete="off">
         <p>
             <label for="iusu">Usuario:</label>
             <input type="text" name="usu" id="iusu" required minlength="5" maxlength="15"
