--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Teste De Formulário</h1>
-    <form action="notas.html" method="get" autocomplete="on">
+    <form action="notas.html" method="get" autocomplete="off">
         <p>
             <label for="inome">Nome</label>
             <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo"
